Fixed layout shift on load

--- a/css/layout.css
+++ b/css/layout.css
@@ -13,7 +13,6 @@ main {
   flex-direction: column;
   place-items: start;
   align-items: start;
-  /* height: 80%; */
   font-size: 1.35rem;
   font-weight: 500;
 }
@@ -31,24 +30,22 @@ main h2 {
 }
 
 .card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 280px));
+  grid-template-rows: repeat(auto-fit, minmax(300px, 330px));
   gap: 50px;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
   text-align: center;
-  max-width: 250px;
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: 200px;
   border-radius: 10px;
+  height: 100%;
   padding: 15px;
   background-color: transparent;
   border: 2px solid black;
   box-shadow: 0px 2px 5px #629ead;
-  flex-basis: 50%;
 }
 
 .grid-layout {
